# ghostescape

./: README.md
ghostescape/: CMakeLists.txt
ghostescape/src/: game.cpp  game.h  main.cpp  scene_main.cpp  scene_main.h
ghostescape/src/core/: game.cpp  game.h  object.h  scene.h
